[package]
name = "http_server"
version = "0.1.0"
authors = ["csh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = { path = "../../" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
